--- a/数据分析与可视化概述.md
+++ b/数据分析与可视化概述.md
@@ -1,7 +1,8 @@
----
-Author：MZJ  
-Date：3/4, 2022
----
+
+|Author|Date|
+|---|---|
+|MZJ|3/4，2022|
+
 
 # 数据分析概念
 >广义的数据分析分为狭义数据分析和数据挖掘。  
@@ -17,3 +18,11 @@ D -->E[分析与建模]
 E --->F[模型评价与优化]
 F --->G[部署]
 ```
+# 数据分析常用类库
+>IPython:科学计算标准工具集的组成部分，增强版的python shell  
+>NumPy：Python科学计算的基础包，对数组进行操作的类库  
+>SciPy：专门解决科学计算中各种标准问题域的模块集合  
+>Pandas： 数据分析核心库  
+>Matplotlib：绘制图表的python库  
+>scikit-learn：数据挖掘和数据分析工具  
+>Spyder：交互式的Python语言开发环境  
